--- a/GDrive_scrape.ipynb
+++ b/GDrive_scrape.ipynb
@@ -15,7 +15,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "JkE83rh0KcOm",
-        "outputId": "b3c49d16-6118-4ba2-cafa-64e118d26ef7",
+        "outputId": "9594659c-265b-4477-f1e5-c02bfae8142c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -29,7 +29,7 @@
             "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (2.31.0)\n",
             "Collecting html2text\n",
             "  Downloading html2text-2024.2.26.tar.gz (56 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.5/56.5 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.5/56.5 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4) (2.5)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests) (3.3.2)\n",
@@ -38,7 +38,7 @@
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests) (2024.6.2)\n",
             "Building wheels for collected packages: html2text\n",
             "  Building wheel for html2text (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for html2text: filename=html2text-2024.2.26-py3-none-any.whl size=33111 sha256=6694112d3877af4102ce00e90484ddb50db9e3e91b845a8a722aad21931edbde\n",
+            "  Created wheel for html2text: filename=html2text-2024.2.26-py3-none-any.whl size=33111 sha256=6ed5dccf28f88789463e68984faba93c78c7c9abbed1e3323a02f1480ddab634\n",
             "  Stored in directory: /root/.cache/pip/wheels/f3/96/6d/a7eba8f80d31cbd188a2787b81514d82fc5ae6943c44777659\n",
             "Successfully built html2text\n",
             "Installing collected packages: html2text\n",
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "gu_uJhySKcOm"
       },
@@ -307,12 +307,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "l7TIONe9KcOr"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import os"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "os.chdir(\"/content/drive/MyDrive/minillm\")"
+      ],
+      "metadata": {
+        "id": "yJ0o_cAsOLNq"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cd /content/drive/MyDrive/minillm"
+      ],
+      "metadata": {
+        "id": "CJMpfm6oOQyR"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls -a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9mrvNlYSOV1u",
+        "outputId": "c8e18446-af3f-4c30-d323-31b4a034ab7a"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "all_texts.txt  .ipynb_checkpoints  texts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "h11wUdB3OYdn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
